[gd_scene load_steps=6 format=3 uid="uid://cvxtsekobub43"]

[ext_resource type="Script" path="res://view/item_display_ui.gd" id="1_ys7v4"]
[ext_resource type="Texture2D" uid="uid://bvowg72qkucjq" path="res://assets/arrow_down.png" id="3_kc2j7"]
[ext_resource type="PackedScene" uid="uid://d2i5xe63ic6h0" path="res://view/inventory_ui.tscn" id="4_rhj4g"]
[ext_resource type="Texture2D" uid="uid://cffgi0huhgb57" path="res://assets/coins.png" id="4_y0po3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0gtm6"]

[node name="ItemDisplayUi" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -106.0
offset_right = 90.0
offset_bottom = 122.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_ys7v4")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = 136.0
offset_right = 10.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="InventoryUi" parent="MarginContainer/HBoxContainer" instance=ExtResource("4_rhj4g")]
layout_mode = 2

[node name="Panel3" type="Panel" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_0gtm6")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SellButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sell"
icon = ExtResource("3_kc2j7")
icon_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "-"
horizontal_alignment = 2

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_y0po3")

[node name="GridContainer" type="GridContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
columns = 4

[node name="GridContainer" type="GridContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/SellButton" to="." method="_on_sell_button_pressed"]
